--- a/src/css/Imagenes.css
+++ b/src/css/Imagenes.css
@@ -9,7 +9,8 @@
   height: 300px;
 }
 
-.AmbientesCompra .Imagenes {
+.AmbientesCompra .Imagenes,
+.HotZone .Imagenes {
   width: 100%;
   height: 100%;
   display: flex;
@@ -21,8 +22,12 @@
   height: 90%;
 }
 
-.BackStore .Imagenes,
-.HotZone .Imagenes {
+.HotZone .Imagenes img {
+  height: 100%;
+}
+
+
+.BackStore .Imagenes {
   width: 100%;
   /* height: 100%; */
   display: flex;
@@ -30,8 +35,7 @@
   align-items: center;
 }
 
-.BackStore .Imagenes img,
-.HotZone .Imagenes img {
+.BackStore .Imagenes img {
   width: 100%;
 }
 
